--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,19 @@
 --- 
 services: 
   infracloudio: 
+    environment: 
+      - CSVSERVER_BORDER=Orange
     image: infracloudio/csvserver
     ports: 
       - "9393:9300"
     volumes: 
       - "/root/csvserver/solution/inputFile:/csvserver/inputdata"
-    environment: 
-      - CSVSERVER_BORDER=Orange
+  promothius: 
+    command: 
+      - "--config.file=/etc/prometheus/prometheus.yml"
+    image: "prom/prometheus:v2.22.0"
+    ports: 
+      - "9090:9090"
+    volumes: 
+      - "./prometheus.yml:/etc/prometheus/prometheus.yml:ro"
 version: "3"
-
